<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical"
    tools:context=".ui.popularMovie.MovieFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/movie_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/movie_icon"
            android:src="@drawable/ic_local_movies" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toStartOf="@+id/image_search"
            android:layout_toEndOf="@+id/movie_icon"
            android:text="@string/breaking_bad" />

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/featured_background"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:background="@color/banner_background_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/recent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movies" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/text_view_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btn_retry"
                    android:layout_centerInParent="true"
                    android:text="@string/results_loaded"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btn_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/retry"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/text_view_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/results_not_found"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>